--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <ul>
-    <li><a href="/home">HOME</a></li>
-    <li><a href="/users">USERS</a></li>
+    <li><a href="/home/index.html">HOME</a></li>
+    <li><a href="/users/index.html">USERS</a></li>
 </ul>
 </body>
 </html>
